// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create properties snapshot tests should match snapshot with errors 1`] = `
<section>
  <h1>
    CreateProperty
  </h1>
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="name"
    >
      Name:
    </label>
    <InputWithError
      error="name error"
      input={
        <input
          name="name"
          onChange={[Function]}
          placeholder="name"
          required={true}
          type=""
          value=""
        />
      }
    />
    <label
      htmlFor="price"
    >
      Price:
    </label>
    <InputWithError
      error="price error"
      input={
        <input
          name="price"
          onChange={[Function]}
          placeholder="price"
          required={true}
          type=""
          value=""
        />
      }
    />
    <label
      htmlFor="location"
    >
      Location:
    </label>
    <InputWithError
      error="location error"
      input={
        <input
          name="location"
          onChange={[Function]}
          placeholder="location"
          required={true}
          type=""
          value=""
        />
      }
    />
    <label
      htmlFor="size"
    >
      Size:
    </label>
    <InputWithError
      error="size error"
      input={
        <input
          name="size"
          onChange={[Function]}
          placeholder="size"
          required={true}
          type=""
          value=""
        />
      }
    />
    <label
      htmlFor="description"
    >
      description:
    </label>
    <InputWithError
      error="description error"
      input={
        <input
          name="description"
          onChange={[Function]}
          placeholder="description"
          required={true}
          type=""
          value=""
        />
      }
    />
    <select
      onChange={[Function]}
      value={1}
    >
      <option>
        1
      </option>
      <option>
        2
      </option>
      <option>
        3
      </option>
      <option>
        4
      </option>
      <option>
        5
      </option>
      <option>
        6
      </option>
      <option>
        7
      </option>
    </select>
    <button>
      submit
    </button>
  </form>
</section>
`;

exports[`create properties snapshot tests should match snapshot without errors 1`] = `
<section>
  <h1>
    CreateProperty
  </h1>
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="name"
    >
      Name:
    </label>
    <InputWithError
      input={
        <input
          name="name"
          onChange={[Function]}
          placeholder="name"
          required={true}
          type=""
          value=""
        />
      }
    />
    <label
      htmlFor="price"
    >
      Price:
    </label>
    <InputWithError
      input={
        <input
          name="price"
          onChange={[Function]}
          placeholder="price"
          required={true}
          type=""
          value=""
        />
      }
    />
    <label
      htmlFor="location"
    >
      Location:
    </label>
    <InputWithError
      input={
        <input
          name="location"
          onChange={[Function]}
          placeholder="location"
          required={true}
          type=""
          value=""
        />
      }
    />
    <label
      htmlFor="size"
    >
      Size:
    </label>
    <InputWithError
      input={
        <input
          name="size"
          onChange={[Function]}
          placeholder="size"
          required={true}
          type=""
          value=""
        />
      }
    />
    <label
      htmlFor="description"
    >
      description:
    </label>
    <InputWithError
      input={
        <input
          name="description"
          onChange={[Function]}
          placeholder="description"
          required={true}
          type=""
          value=""
        />
      }
    />
    <select
      onChange={[Function]}
      value={1}
    >
      <option>
        1
      </option>
      <option>
        2
      </option>
      <option>
        3
      </option>
      <option>
        4
      </option>
      <option>
        5
      </option>
      <option>
        6
      </option>
      <option>
        7
      </option>
    </select>
    <button>
      submit
    </button>
  </form>
</section>
`;
